--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.10.0",
+    "antd-mobile": "^2.2.13",
     "antd-theme-generator": "^1.1.3",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
