--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-router-dom": "^4.3.1",
     "recharts": "^1.3.3",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.5",
     "redux-alita": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
