--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.5",
     "redux-alita": "^1.0.0",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
